	gcc: 	PR bootstrap/41771 	* flags.h: Don't include real.h. 	(HONOR_NANS, HONOR_SNANS, HONOR_INFINITIES, HONOR_SIGNED_ZEROS, 	HONOR_SIGN_DEPENDENT_ROUNDING): Move ... 	* real.h (HONOR_NANS, HONOR_SNANS, HONOR_INFINITIES, 	HONOR_SIGNED_ZEROS, HONOR_SIGN_DEPENDENT_ROUNDING): ... here. 	* dominance.c: Update copyright. 	* gimple.c (walk_gimple_op): Remove inline. 	* tree-ssa-reassoc.c: Include real.h. 	* Makefile.in (FLAGS_H): Remove $(REAL_H). 	(tree-ssa-reassoc.o): Depend on $(REAL_H).

include:
	PR bootstrap/41771
	* ansidecl.h: Fix inline test for C99 and Sun Studio cc.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155654 138bc75d-0d04-0410-961f-82ee72b054a4